# HoshinoLang

./: CMakeLists.txt  README.md
build_support/: install_support.sh
builtin_lib/: CMakeLists.txt  lib.cpp  lib.h
includes/: context.h
includes/ast/: basic_ast.h
includes/code_gen/: ir.h
includes/jit/: HoshinoJIT.h
includes/lexer/: token.h
includes/tools/: basic_tool.h  ir_tool.h
src/: context.cpp  main.cpp
src/code_gen/: ir_code_gen.cpp
src/lexer/: token.cpp
